--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table>
           <tr>
             <td><img src="http://cdn.lowgif.com/small/8bb6a5fb7ac062e7-ron-swanson-bacon-gif-find-share-on-giphy.gif" alt="MORE BACON PLZ"></td>
-            <td><img src="https://media1.tenor.com/images/914ce634ce941527ebe9b4cdd004b8ce/tenor.gif?itemid=5276487" alt=""> <h5>Call my man dwight just to see what's shakin'</h5></td>
+            <td><img src="https://media1.tenor.com/images/914ce634ce941527ebe9b4cdd004b8ce/tenor.gif?itemid=5276487" alt=""></td>
           </tr>
           <tr>
             <td>
