--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </tr>
         </table>
       </td>
-      <td><img id="baconBoy" src="https://media.giphy.com/media/l0Hlv6LWDGKnXlXTq/giphy.gif" alt=""></td>
+      <td><img class="baconBoy" src="https://media.giphy.com/media/l0Hlv6LWDGKnXlXTq/giphy.gif" alt=""></td>
     </tr>
   </table>
   <a href="https://www.youtube.com/watch?v=e-5GirZe_jY"><h2>BACON ASMR</h2></a>
